--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -31,6 +31,8 @@ jobs:
           install.packages('lubridate')
           install.packages('TSstudio')
           install.packages('BCDating')
+          install.packages('remotes')
+          install.packages('sessioninfo')
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
