--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -1,3 +1,5 @@
+name: data_request
+on: [push]
 jobs:
   generate-data:
     runs-on: ${{ matrix.config.os }}
@@ -47,25 +49,17 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
-        shell: Rscript {0}
+        shell: Rscript{0}
         
-        - name: Generate data
+      - name: Generate data
         run: |
           source("data_pipe.R")
-        shell: Rscript {0} 
+        shell: Rscript{0} 
         
-         name: Commit files
+      - name: Commit files
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add --all
           git commit -am "add data"
           git push
-          
-          - name: Session info
-        run: |
-          options(width = 100)
-          pkgs <- installed.packages()[, "Package"]
-          sessioninfo::session_info(pkgs, include_base = TRUE)
-        shell: Rscript {0}
-         
