--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -27,27 +27,10 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@master
 
-      - name: Query dependencies
+      - name: Setup dependencies
         run: |
-          install.packages('tidyverse')
-          install.packages('lubridate')
-          install.packages('TSstudio')
-          install.packages('BCDating')
-          install.packages('remotes')
-          install.packages('sessioninfo')
-        
-
-      - name: Cache R packages
-        uses: actions/cache@v1
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
-
-      - name: Install dependencies
-        run: |
-          remotes::install_deps(dependencies = TRUE)
-      
+          R -e 'install.packages("renv")'
+          R -e 'renv::restore()'      
         
       - name: Generate data
         run: |
