--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -34,7 +34,8 @@ jobs:
         
       - name: Generate data
         run: |
-          R -e 'renv::run("data_pipe.R")'
+          R -e 'renv::run("dados/data_pipe.R")'
+        
          
         
       - name: Commit files
