--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -33,6 +33,7 @@ jobs:
           R -e 'renv::restore()'      
         
       - name: Generate data
+        env: repo_token ${{ secrets.GITHUB_TOKEN }}
         run: |
           R -e 'renv::run("dados/data_pipe.R")'
         
