--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -1,7 +1,7 @@
 name: data_request
 on: [push]
 jobs:
-  generate-data:
+  run:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
