--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -1,7 +1,6 @@
-name: generate-data
 on: [push]
 jobs:
-  run:
+  generate-data:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
