--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -19,7 +19,7 @@ jobs:
         env: 
           repo_token: ${{ secrets.GITHUB_TOKEN }} 
         run: |
-          R -e 'renv::run("recessions-forecast-br/dados/data_pipe.R")'
+          Rscript data_pipe.R
       
                  
       - name: Commit files
