--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -1,25 +1,28 @@
-name: data_request
+name: data-generate
+
+# Controls when the action will run.
 on: [push]
-jobs:
-  generate-data:
-    runs-on: [ubuntu-latest]
-    container: docker://dvcorg/cml:latest
+
+
+jobs: 
+  autoscrape:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Load repo and install R
     steps:
-      - uses: actions/checkout@v2
-        
- 
-      - uses: r-lib/actions/setup-r@master
-      
-      - name: Setup dependencies
-        run: |
-          R -e 'install.packages("renv")'
-          R -e 'renv::restore()'      
-        
-      - name: Generate data
-        env: 
-          repo_token: ${{ secrets.GITHUB_TOKEN }} 
-        run: |
-          Rscript data_pipe.R
+    - uses: actions/checkout@master
+    - uses: r-lib/actions/setup-r@master
+
+    # Set-up R
+    - name: Install packages
+      run: |
+        R -e 'install.packages("tidyverse")'
+        R -e 'install.packages("TSstudio")'
+        R -e 'install.packages("BCDating")'
+    # Run R script
+    - name: Data-Pipe
+      run: Rscript data_pipe.R
       
                  
       - name: Commit files
