--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -26,9 +26,9 @@ jobs:
       
                  
     - name: Commit files
-        run:|
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git add --all
-          git commit -am "add data"
-          git push
+      run: |
+        git config --local user.name actions-user
+        git config --local user.email "actions@github.com"
+        git add -all
+        git commit -am "add data"
+        git push origin main
