--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -7,7 +7,7 @@ on: [push]
 jobs: 
   autoscrape:
     # The type of runner that the job will run on
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
 
     # Load repo and install R
     steps:
