--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -2,8 +2,7 @@ name: data_request
 on: [push]
 jobs:
   generate-data:
-    runs-on: [ubuntu-latest]
-    container: docker://dvcorg/cml:latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         
