--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -18,7 +18,7 @@ jobs:
         env: 
           repo_token: ${{ secrets.GITHUB_TOKEN }} 
         run: |
-          Rscript data_pipe.R
+          Rscript dados/data_pipe.R
       
                  
       - name: Commit files
