--- a/.github/workflows/schedule_data.yaml
+++ b/.github/workflows/schedule_data.yaml
@@ -39,5 +39,5 @@ jobs:
         git config --local user.name actions-user
         git config --local user.email "actions@github.com"
         git add my_data.rds
-        git commit -am "add data"
+        git commit --allow-empty -am "add data" 
         git push origin main
